// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tree /> snapshot should match snapshot 1`] = `
<ForwardRef
  treeStructure={
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "id": "1",
          "isOpenByDefault": undefined,
        },
        Object {
          "children": Array [],
          "id": "2",
          "isOpenByDefault": undefined,
        },
      ],
      "id": "root",
      "isOpenByDefault": true,
    }
  }
>
  <div
    className="md-tree-wrapper"
    onKeyDown={[Function]}
    role="tree"
  />
</ForwardRef>
`;

exports[`<Tree /> snapshot should match snapshot with className 1`] = `
<ForwardRef
  className="example-class"
  treeStructure={
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "id": "1",
          "isOpenByDefault": undefined,
        },
        Object {
          "children": Array [],
          "id": "2",
          "isOpenByDefault": undefined,
        },
      ],
      "id": "root",
      "isOpenByDefault": true,
    }
  }
>
  <div
    className="example-class md-tree-wrapper"
    onKeyDown={[Function]}
    role="tree"
  />
</ForwardRef>
`;

exports[`<Tree /> snapshot should match snapshot with id 1`] = `
<ForwardRef
  id="example-id"
  treeStructure={
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "id": "1",
          "isOpenByDefault": undefined,
        },
        Object {
          "children": Array [],
          "id": "2",
          "isOpenByDefault": undefined,
        },
      ],
      "id": "root",
      "isOpenByDefault": true,
    }
  }
>
  <div
    className="md-tree-wrapper"
    id="example-id"
    onKeyDown={[Function]}
    role="tree"
  />
</ForwardRef>
`;

exports[`<Tree /> snapshot should match snapshot with style 1`] = `
<ForwardRef
  style={
    Object {
      "color": "pink",
    }
  }
  treeStructure={
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "id": "1",
          "isOpenByDefault": undefined,
        },
        Object {
          "children": Array [],
          "id": "2",
          "isOpenByDefault": undefined,
        },
      ],
      "id": "root",
      "isOpenByDefault": true,
    }
  }
>
  <div
    className="md-tree-wrapper"
    onKeyDown={[Function]}
    role="tree"
    style={
      Object {
        "color": "pink",
      }
    }
  />
</ForwardRef>
`;

exports[`<Tree /> snapshot should match snapshot with style 2`] = `
<ForwardRef
  style={
    Object {
      "color": "pink",
    }
  }
  treeStructure={
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "id": "1",
          "isOpenByDefault": undefined,
        },
        Object {
          "children": Array [],
          "id": "2",
          "isOpenByDefault": undefined,
        },
      ],
      "id": "root",
      "isOpenByDefault": true,
    }
  }
>
  <div
    className="md-tree-wrapper"
    onKeyDown={[Function]}
    role="tree"
    style={
      Object {
        "color": "pink",
      }
    }
  />
</ForwardRef>
`;

exports[`<Tree /> snapshot should match snapshot with style 3`] = `
<ForwardRef
  style={
    Object {
      "color": "pink",
    }
  }
  treeStructure={
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "id": "1",
          "isOpenByDefault": undefined,
        },
        Object {
          "children": Array [],
          "id": "2",
          "isOpenByDefault": undefined,
        },
      ],
      "id": "root",
      "isOpenByDefault": true,
    }
  }
>
  <div
    className="md-tree-wrapper"
    onKeyDown={[Function]}
    role="tree"
    style={
      Object {
        "color": "pink",
      }
    }
  />
</ForwardRef>
`;
